# Machine-Learning-Datasets

./: 404.html  PKG-INFO  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
docs/: index.md
docs/reference/: common.md  config.md  deprecated.md  evaluate.md  interpret.md  preprocess.md
machine_learning_datasets/: __init__.py  common.py  config.py  container.py  deprecated.py  evaluate.py  interpret.py  preprocess.py
machine_learning_datasets/sources/: kaggle.py  source.py  url.py
reference/common/: index.html
reference/config/: index.html
reference/deprecated/: index.html
reference/evaluate/: index.html
reference/interpret/: index.html
reference/preprocess/: index.html
tests/: test_evaluate.py  test_interpret.py  test_preprocess.py
