[tool.poetry]
name = "machine-learning-datasets"
version = "0.1.23"
description = "A simple library for loading machine learning datasets and performing some common machine learning interpretation functions. Built for the book \"Interpretable Machine Learning with Python, 2E\"."
authors = ["Serg Masís <smasis@hawk.iit.edu>"]
license = "MIT License"
packages = [{include = "machine_learning_datasets"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^1.5.3"
numpy = "^1.23.5"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
scipy = "^1.11.3"
opencv-python = "^4.5.1"
torchvision = "^0.16.0"
seaborn = "^0.12.2"
requests = ">=2.31.0"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "7.2.*"}
black = {version = "23.1.*", allow-prereleases = true}
pytest = "7.2.*"
pytest-html = "3.2.*"
pytest-cov = "4.0.*"
pylint = "2.16.*"
mkdocs = "1.5.*"
mkdocstrings = {extras = ["python"], version = "^0.23"}
mkdocs-material = "^9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
